# Lemmatize

./: README.md  pyproject.toml
docs/: idea.md  requirements.md
examples/: irrational-sqrt-two.md
lemmatize/: bezouts-identity.yaml  euclid-infinitude-primes.yaml  euclids-lemma.yaml  fundamental-theorem-arithmetic.yaml  irrational-sqrt-two.yaml
pipeline/: __init__.py  cli.py  faithfulness.py  lookup.py  validate.py  verbalize.py
schema/: entry.schema.json  proof-methods.yaml
tests/: test_validate.py  test_verbalize.py
