[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lemmatize"
version = "0.1.0"
description = "An ontology-driven natural-language layer for Lean's Mathlib."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Lemmatize contributors" }]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
lemmatize = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]
